# git_dump

./: .gitignore  README.md  git_dump.py  pyproject.toml  repository_contents.txt
src/git_dump/: __init__.py  cli.py  core.py
tests/: test_git_dump.py
