[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-dump"
version = "1.1.0"
description = "A robust CLI tool to concatenate Git repository contents for LLM context"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pathspec>=0.10.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.3.0"]

[project.scripts]
git-dump = "git_dump.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/git-dump"
Repository = "https://github.com/yourusername/git-dump"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]